--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,26 @@
-h1 {
-  font-family: "Shizuru", cursive;
+:root {
+  --branding-color: #2b2728;
+}
+h1 h2 h3 {
+  font-family: "Poppins", sans-serif;
   font-weight: normal;
 }
-p {
+h1 {
+  font-size: 72px;
+}
+.hero {
+  background-color: var(--branding-color);
+  color: white;
+  text-align: center;
+  padding: 120px 0;
+}
+.btn-branding {
+  background-color: white;
+  border-radius: 4px;
+  color: var(--branding-color);
+  font-size: 15px;
+  line-height: 27px;
+  font-weight: bold;
+  padding: 5px 10px;
+  margin: 30px auto;
 }
