--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,9 @@ h1 h2 h3 {
 h1 {
   font-size: 72px;
 }
+h2 {
+  font-size: 40px;
+}
 .hero {
   background-color: var(--branding-color);
   color: white;
@@ -23,4 +26,29 @@ h1 {
   font-weight: bold;
   padding: 5px 10px;
   margin: 30px auto;
+}
+.btn-branding-outline {
+  background-color: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 15px;
+  line-height: 27px;
+  font-weight: bold;
+  padding: 5px 10px;
+  margin: 30px auto;
+}
+p {
+  font-size: 16px;
+}
+@media (max-width: 900px) {
+  h1 {
+    font-size: 60px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  .hero {
+    padding: 60px 0;
+  }
 }
