--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,17 @@ h2 {
   margin-top: 60px;
   border-radius: 10px;
 }
+.project-container {
+  padding: 80px 0;
+  font-family: "Poppins", sans-serif;
+}
+.project-container h3 {
+  font-size: 24px;
+  margin: 15px 0 0;
+}
+.project-container p {
+  font-size: 14px;
+}
 p {
   font-size: 16px;
 }
